# topicos-teses-e-dissertacoes

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
notebooks/: 1.obter_catalogos.ipynb  2.limpeza_resumos.ipynb  3.1.analise_resumos_grande_area.ipynb
