[tool.poetry]
name = "topicos-teses-e-dissertacoes"
version = "0.1.0"
description = "Investigando a evolução dos tópicos de pesquisa nas teses e dissertações do Brasil"
authors = ["Jessica Sousa <jessicasousa.pc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
tqdm = "^4.66.2"
ipywidgets = "^8.1.2"
pyarrow = "^15.0.2"
matplotlib = "^3.8.3"
gensim = "^4.3.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
